<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rock_detection_pkg</name>
  <version>0.0.1</version>
  <description>Package for rock detection</description>
  <maintainer email="alejandro@todo.todo">alejandro</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>ament_python</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend> <!-- Or any other ROS dependencies you use -->

  <!-- Test dependencies -->
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <!-- Export the build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
